--- a/index.html
+++ b/index.html
@@ -17,27 +17,21 @@
             <h2>Programme en C</h2>
             <h3>TP Polynôme Binaire</h3>
             <ul>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/polynome_binaire1.c">Voir question 1 ici</a></li>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/polynome_binaire2.c">Voir question 2 ici</a></li>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/polynome_binaire3.c">Voir question 3 ici</a></li>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/polynome_operation.c">Voir question 4 ici</a></li>
+                <li><a href="projects/c_programs/polynome_binaire1.c">Voir question 1 ici</a></li>
+                <li><a href="projects/c_programs/polynome_binaire2.c">Voir question 2 ici</a></li>
+                <li><a href="projects/c_programs/polynome_binaire3.c">Voir question 3 ici</a></li>
+                <li><a href="projects/c_programs/polynome_operation.c">Voir question 4 ici</a></li>
             </ul>
-            
             <h3>TP Nombre de Gauss</h3>
             <ul>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/gauss_1.c">Voir question 1 ici</a></li>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/gauss_2.c">Voir question 2 ici</a></li>
-            </ul>
-            
-            <h3>TP Transformée de Fourier</h3>
-            <ul>
-                <li><a href="https://github.com/AD72876/amine-projets.github.io/blob/main/tp2fourrier.c">Voir TP ici</a></li>
+                <li><a href="projects/c_programs/gauss_1.c">Voir question 1 ici</a></li>
+                <li><a href="projects/c_programs/gauss_2.c">Voir question 2 ici</a></li>
             </ul>
 
             <h2>Programme en Sage/Python</h2>
             <ul>
-                <li><a href="https://nbviewer.org/github/AD72876/amine-projets.github.io/raw/main/algo_arithm2.ipynb">Voir mon notebook ici</a></li>
-                <li><a href="https://nbviewer.org/github/AD72876/amine-projets.github.io/raw/main/attaque_sidelnikov_codes.ipynb">Voir mon notebook ici</a></li>
+                <li><a href="projects/sage_programs/algo_arithm2.ipynb">Voir mon notebook ici</a></li>
+                <li><a href="projects/sage_programs/attaque_sidelnikov.ipynb">Voir mon notebook ici</a></li>
                 <!-- Ajoute d'autres liens de la même manière -->
             </ul>
         </section>
